Bug 161945 - Horizontal scrolling with Shift+Scrollwheel slows down when going toward column A
Summary: Horizontal scrolling with Shift+Scrollwheel slows down when going toward colu...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: low trivial
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:25.2.0 target:24.8.1.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-07-08 06:03 UTC by onnogli
Modified: 2025-11-22 05:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A blank Calc file (8.49 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-07-09 08:53 UTC, onnogli
Details
A video of the bug (85.23 KB, video/x-matroska)
2024-07-10 06:32 UTC, onnogli
Details

Note You need to log in before you can comment on or make changes to this bug.
Description onnogli 2024-07-08 06:03:15 UTC
When scrolling to the left, columns A and B take longer to scroll to than other columns.
Comment 1 m_a_riosv 2024-07-08 19:23:00 UTC
Please attach a sample file, reduce the size as much as possible without private information, and paste the information in Menu/Help/About LibreOffice, there is a copy icon.
Comment 2 onnogli 2024-07-09 08:53:45 UTC
Created attachment 195178 [details]
A blank Calc file

I don't think the bug is due to saving as the bug seems to be in any file I open, but here it is.
Comment 3 onnogli 2024-07-09 08:53:56 UTC
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-CA (en_CA); UI: en-GB
Calc: CL threaded
Comment 4 m_a_riosv 2024-07-09 11:59:16 UTC
I can't reproduce with
Version: 24.2.5.1 (X86_64) / LibreOffice Community
Build ID: 2ccb78ad6bdfe3f3356a7a7f294ec388775c5816
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Please test in safe mode, Menu/Help/Restart in Safe Mode
Comment 5 Mudge 2024-07-09 19:25:10 UTC
Thank you for reporting the bug. I can not reproduce the bug in

Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 24; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 onnogli 2024-07-10 06:32:35 UTC
Created attachment 195197 [details]
A video of the bug

It's a very small thing and not too big of a deal but here it is happening. Notice it takes longer to scroll to column A while I'm trying to scroll at a constant rate. One thing I really should have clarified however was that this is for using the scroll wheel on the mouse (I forgot there were other methods).
Comment 7 stragu 2024-07-24 12:39:45 UTC
Not reproduced on Linux:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 57f46e0244bdc1165ebbc5e09e4069cc075ff7ae
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 8 Buovjaga 2024-08-29 05:29:12 UTC
(In reply to onnogli from comment #6)
> Created attachment 195197 [details]
> A video of the bug
> 
> It's a very small thing and not too big of a deal but here it is happening.
> Notice it takes longer to scroll to column A while I'm trying to scroll at a
> constant rate. One thing I really should have clarified however was that
> this is for using the scroll wheel on the mouse (I forgot there were other
> methods).

What's the secret to scrolling horizontally with the mouse wheel?
Comment 9 ady 2024-08-29 11:51:49 UTC
(In reply to Buovjaga from comment #8)

> What's the secret to scrolling horizontally with the mouse wheel?

[SHIFT]+mouse_wheel
Comment 10 Buovjaga 2024-08-29 16:59:59 UTC
Bibisected with win64-24.2 (but then noticed it was a backport) to 24effe0edd9ae1ea9e4dd8e0bdabd5f25e1b9a68
tdf#135478 Reduce sensitivity of horizontal scrollwheel

Also seen on Linux.

Patrick: seems to be some corner case in the scrolling code. It kind of gets stuck at column B and takes an extra spin of the wheel to get to A.
Comment 11 Patrick (volunteer) 2024-08-29 18:54:57 UTC
(In reply to Buovjaga from comment #10)
> Bibisected with win64-24.2 (but then noticed it was a backport) to
> 24effe0edd9ae1ea9e4dd8e0bdabd5f25e1b9a68
> tdf#135478 Reduce sensitivity of horizontal scrollwheel
> 
> Also seen on Linux.
> 
> Patrick: seems to be some corner case in the scrolling code. It kind of gets
> stuck at column B and takes an extra spin of the wheel to get to A.

I can reproduce this on macOS with an old USB mouse. It really does seem like it gets stuck in column B and needs a larger than expected amount of additional scrolling to move to column A.

I will investigate and post again when I have some news to report.
Comment 12 Patrick (volunteer) 2024-08-30 01:24:04 UTC
I have a fix (at least one that works on macOS) in the following patch:

https://gerrit.libreoffice.org/c/core/+/172619

Would anyone be able to test the patch on Windows and Linux?
Comment 13 Patrick (volunteer) 2024-09-03 15:22:01 UTC
(In reply to Patrick (volunteer) from comment #12)
> I have a fix (at least one that works on macOS) in the following patch:
> 
> https://gerrit.libreoffice.org/c/core/+/172619
> 
> Would anyone be able to test the patch on Windows and Linux?

OK. After several iterations, I think the above patch now handles horizontal scrollwheel events smoothly on Linux and macOS and the patch does not cause tdf#135478 to reoccur.

Just need someone to test the patch on Windows before I commit it.
Comment 14 Commit Notification 2024-09-07 17:43:27 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/50d373a275626d894dc885d4c2cc28a9f9b8b912

tdf#161945 increase sensitivity for negative horizontal deltas

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Patrick (volunteer) 2024-09-07 17:46:33 UTC
I have committed my fix for this bug. The fix should be in tomorrow's (08 September 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Notes for macOS testers:

The nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 16 Commit Notification 2024-09-07 19:21:41 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/063b64d0ad31a68a13da0ee0803a7016890b7b28

tdf#161945 increase sensitivity for negative horizontal deltas

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Buovjaga 2024-09-08 09:58:02 UTC
Scrolling seems fine now in the Windows version as well.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8eb95e8407ef24436e0e8e218dce535df6bb2e5
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-GB
Calc: threaded
Comment 18 Commit Notification 2024-09-09 07:15:01 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/f4f0e679f94201096ef4e28980a946035afc18a1

tdf#161945 increase sensitivity for negative horizontal deltas

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.