tdf#161945 increase sensitivity for negative horizontal deltas

A side effect of the anti-jitter code is that it tends to
reduce the sensitivity of horizontal scroll events towards the
first column. It is particularly noticeable with horizontal
scroll events from a scrollwheel when the view position is in
column B or C. This results in a very small delta from the
anti-jitter code.

So, to balance things out, apply a constant adjustment factor
to increase the sensitivity more for small deltas than for
large deltas.

Also, while the fix for tdf#135478 reduces the horizontal
scroll delta applied to the tab view, the horizontal scrollbar
is set before that with the original delta. As a result, the
horizontal scrollbar is now mispositioned so update the
horizontal scrollbar position to match the position of the
tab view's visible columns.

Change-Id: I4be66c40692d4b92557f31235339ac6c40755ae7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172619
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 50d373a275626d894dc885d4c2cc28a9f9b8b912)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173005
Tested-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>